# growtopia-proxy

./: Cargo.toml  README.md  config.json
certs/: cert.pem  key.pem
src/: main.rs  packet_handler.rs  resolver.rs  variant_handler.rs
src/enet/: client.rs  server.rs
src/types/: config.rs  epacket_type.rs  etank_packet_type.rs  mod.rs  packet_flag.rs  player.rs  tank_packet.rs  vector2.rs
src/utils/: config.rs  mod.rs  text_parse.rs  variant.rs
