[package]
name = "growtopia-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "3.0.5", features = ["json"] }
serde_json = "1.0.138"
log = "0.4.25"
env_logger = "0.11.6"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"]}
rustls = { version = "0.23.23", features = ["ring"] }
serde = { version = "1.0.217", features = ["derive"] }
rusty_enet = { git = "https://github.com/CLOEI/rusty_enet.git" }
